@@ -2,6 +2,7 @@ PHORONIX TEST SUITE CHANGE-LOG
 
 Phoronix Test Suite (Git)
 
+pts-core: Allow PTS_DISPLAY_MODE to override other display mode preferences (e.g. short mode requested inline)
 phoromatic: Allow binary log file uploads by default when Phoromatic Server is 10.8+
 phoromatic: Input sanitization updates for Phoromatic Server
 phoromatic: Move "Create A Test Profile" page behind an opt-in rootadmin Phoromatic Server option
